[11.12] released ...
* Unless the 'fullnames' variable was set, nail did not generate 'To' header
  fields when replying to messages since version 11.5 (Bugreport by Bob
  Tennent).
* An internal problem in the token scanning for junk mail detection has been
  fixed; the end of the mail header was not always correctly determined.
* Special characters in IMAP or POP3 account strings like 'imap://user@host'
  can now be escaped using URL notation, e.g. 'foo%2Fbar' for 'foo/bar'. It
  was previously not possible to use these characters. This is a slightly
  incompatible change as the '%' character must now also be escaped, as
  '%25'. (Bugreport by Thomas Wolff.)
* The system mailbox is now locked using fcntl(2) for reading too (Problem
  reported by Thomas Wolff).
* When new mail arrives in an IMAP mailbox, the current message is now
  properly advanced by the 'next' command if it has been printed before.

[11.11] released 10/13/04
* When sending messages that contain ASCII control characters but neither
  NULs nor non-ASCII characters, the quoted-printable MIME encoding is now
  used instead of 7bit.
* A dangling pointer after a memory reallocation could result in a coredump
  when the junk mail database was updated by a 'good' or a 'junk' command.
* The code for accessing the junk mail database has been made more machine-
  independent. It will not make a difference on most of the platforms on
  which nail runs. If your compiler does insert padding into C structs that
  contain only members of type char, you will have to create the junk mail
  database from scratch again, though.

[11.10] released 10/3/04
* The creation of quoted-printable encoded MIME data was broken in 11.9.
* Junk mail filter improvement: Do not ignore single-letter words; extract
  hostnames from URLs and store them separately.

[11.9] released 10/2/04
* A Bayesian junk mail filter has been added. See the 'EXAMPLES' section of
  the manual page for an introduction.